[gd_scene load_steps=22 format=3 uid="uid://bc0sds7o685ht"]

[ext_resource type="Script" path="res://Scripts/LevelStatsDisplay.gd" id="1_p3cjv"]
[ext_resource type="FontFile" uid="uid://ccnslr75308d7" path="res://Fonts/ChakraPetch-Bold.ttf" id="1_y8qj5"]
[ext_resource type="FontFile" uid="uid://dnvf2ybp7jptv" path="res://Fonts/ChakraPetch-Regular.ttf" id="2_n1vgf"]
[ext_resource type="AudioStream" uid="uid://cw7jxwjvsrlm7" path="res://Music/victory.mp3" id="4_kpax7"]
[ext_resource type="Script" path="res://Scripts/MenuButtonPrompts.gd" id="5_qpbyf"]
[ext_resource type="Script" path="res://Scripts/TouchScreenButtonPositioning.gd" id="6_q6gwg"]
[ext_resource type="Texture2D" uid="uid://bin0aegm30ax1" path="res://Graphics/Touch Buttons/x-button.png" id="7_vqr41"]
[ext_resource type="Texture2D" uid="uid://b8rsjiau2323f" path="res://Graphics/Touch Buttons/x-button-touched.png" id="8_rslxx"]
[ext_resource type="Texture2D" uid="uid://dvbghtag4eoui" path="res://Graphics/Touch Buttons/a-button.png" id="11_je75x"]
[ext_resource type="Texture2D" uid="uid://coqqu0wvl66h5" path="res://Graphics/Touch Buttons/a-button-touched.png" id="12_cf74e"]
[ext_resource type="Texture2D" uid="uid://h3yknnqacbfk" path="res://Graphics/Touch Buttons/b-button.png" id="13_0afnu"]
[ext_resource type="Texture2D" uid="uid://bfhfhr32o4nur" path="res://Graphics/Touch Buttons/b-button-touched.png" id="14_mmfvk"]

[sub_resource type="Gradient" id="Gradient_wllgh"]
colors = PackedColorArray(0.240831, 0.122865, 0.609977, 1, 0.48985, 0.0395198, 0.690076, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1dys0"]
gradient = SubResource("Gradient_wllgh")
fill_from = Vector2(0.457265, 0)
fill_to = Vector2(0.448718, 0.974359)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0wh5"]
bg_color = Color(0, 0, 0, 0.239216)
corner_radius_top_left = 75
corner_radius_top_right = 75
corner_radius_bottom_right = 75
corner_radius_bottom_left = 75
expand_margin_left = 35.0
expand_margin_top = 35.0
expand_margin_right = 35.0
expand_margin_bottom = 35.0

[sub_resource type="LabelSettings" id="LabelSettings_nea8l"]
font = ExtResource("1_y8qj5")
font_size = 91

[sub_resource type="LabelSettings" id="LabelSettings_07h0f"]
font = ExtResource("2_n1vgf")
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_qfwci"]
font = ExtResource("1_y8qj5")
font_size = 140
shadow_color = Color(0, 0, 0, 0.25098)
shadow_offset = Vector2(6, 6)

[sub_resource type="Animation" id="Animation_4x1mv"]
resource_name = "show"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(382, 0), Vector2(382, 242)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/Title:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/Level:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel/VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel/Rank:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.7, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel/Rank:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.7, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Controls:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hpgpn"]
_data = {
"show": SubResource("Animation_4x1mv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_og6s2"]
radius = 139.19

[node name="LevelStats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p3cjv")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_1dys0")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(652, 603)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -592.0
offset_top = -314.0
offset_right = 592.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k0wh5")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
text = "Stage Clear"
label_settings = SubResource("LabelSettings_nea8l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 121.0
offset_bottom = 195.0
grow_horizontal = 2
text = "Level name goes here."
label_settings = SubResource("LabelSettings_07h0f")
horizontal_alignment = 1

[node name="Rank" type="Label" parent="Panel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -91.0
offset_right = 66.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(66, 92)
text = "Z"
label_settings = SubResource("LabelSettings_qfwci")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -268.5
offset_top = -152.0
offset_right = 268.5
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Time" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Level time goes here."
label_settings = SubResource("LabelSettings_07h0f")
horizontal_alignment = 1

[node name="Rings" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Rings go here."
label_settings = SubResource("LabelSettings_07h0f")
horizontal_alignment = 1

[node name="VictoryMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kpax7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hpgpn")
}

[node name="Controls" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -115.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("1_y8qj5")
theme_override_font_sizes/normal_font_size = 42
bbcode_enabled = true
text = "[center] {mA} Continue  {mB} Main Menu  {X} Replay Level[/center]"
fit_content = true
script = ExtResource("5_qpbyf")

[node name="TouchControls" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.823529)
top_level = true
position = Vector2(0, -69)
script = ExtResource("6_q6gwg")

[node name="Left" type="Node2D" parent="TouchControls"]
position = Vector2(0, 478)

[node name="Right" type="Node2D" parent="TouchControls"]
position = Vector2(1819, 478)

[node name="JumpButton" type="TouchScreenButton" parent="TouchControls/Right"]
position = Vector2(-500, 0)
texture_normal = ExtResource("11_je75x")
texture_pressed = ExtResource("12_cf74e")
shape = SubResource("CircleShape2D_og6s2")
action = "Jump"
visibility_mode = 1

[node name="SpinButton" type="TouchScreenButton" parent="TouchControls/Right"]
position = Vector2(-219, -2)
texture_normal = ExtResource("13_0afnu")
texture_pressed = ExtResource("14_mmfvk")
shape = SubResource("CircleShape2D_og6s2")
action = "Spin"
visibility_mode = 1

[node name="Unused1" type="TouchScreenButton" parent="TouchControls/Right"]
position = Vector2(-500, -279)
texture_normal = ExtResource("7_vqr41")
texture_pressed = ExtResource("8_rslxx")
shape = SubResource("CircleShape2D_og6s2")
action = "Unused1"
visibility_mode = 1
